--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello
+<!DOCTYPE html>
+<html lang="zh-cn">
+<head>
+    <title>superliwei.github.io</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <script src="assets/libs/seajs-2.3.0/dist/sea-debug.js"></script>
+    <script src="assets/js/config.js"></script>
+</head>
+<body>
+</body>
+</html>
