Painter新增在线文件.

--- a/labs/Painter/index.html
+++ b/labs/Painter/index.html
@@ -449,5 +449,13 @@
 		<div id="loadingMask" class="ui page dimmer">
 			<div class="ui text loader">Loading</div>
 		</div>
+		
+		<!-- 在线文件窗口  -->
+		<div id="onlineFileWin" class="ui modal">
+			<div class="header"><i class="world icon"></i>在线文件</div>
+			<div class="content" style="margin: 0;padding: 0;padding-right: 10px;padding-bottom: 10px;">
+				<div style="clear: both;"></div>
+			</div>
+		</div>
 	</body>
 </html>
