--- a/labs/Painter/index.html
+++ b/labs/Painter/index.html
@@ -42,6 +42,11 @@
 				    		<div class="item">
 				    			<span class="text">打开绘画过程</span>
 				    		</div>
+				    		<div class="divider"></div>
+				    		<div class="item">
+				    			<i class="world icon"></i>
+				    			<span class="text">在线文件</span>
+				    		</div>
 		    			</div>
 		    		</div>
 		    		<div class="item">
