Painter新增放大镜功能.

--- a/labs/Painter/index.html
+++ b/labs/Painter/index.html
@@ -160,6 +160,11 @@
 				    			<span class="text">油漆桶</span>
 				    			<span class="description">Shift+4</span>
 				    		</div>
+				    		<div class="item">
+				    			<i class="zoom icon"></i>
+				    			<span class="text">放大镜</span>
+				    			<span class="description">Shift+5</span>
+				    		</div>
 		    			</div>
 		    		</div>
 		    		<div class="divider"></div>
@@ -233,6 +238,12 @@
 		    		<div class="text"></div>
 		    		<i class="dropdown icon"></i>
 		    		<div class="menu">
+		    		</div>
+		    	</div>
+		    	<div class="ui dropdown item">
+		    		<div class="text"></div>
+		    		<i class="dropdown icon"></i>
+		    		<div class="menu">
 		    			<a class="item" data-value="layers"><i class="icon iconfont">&#xe62d;</i>图层面板</a>
 		    			<a class="item" data-value="properties"><i class="icon dashboard"></i>属性面板</a>
 		    			<a class="item" data-value="history"><i class="icon history"></i>历史记录</a>
@@ -248,6 +259,7 @@
 						<button class="ui button"><i class="erase icon"></i></button>
 						<button class="ui button"><i class="eyedropper icon"></i></button>
 						<button class="ui button"><i class="icon iconfont">&#xe687;</i></button>
+						<button class="ui button"><i class="zoom icon"></i></button>
 					</div>
 				</div>
 			</div>
