--- a/labs/Painter/index.html
+++ b/labs/Painter/index.html
@@ -417,6 +417,24 @@
 		    		<i class="play icon"></i>
 		    	</a>
 		    	<div class="ui slider" style="margin-left: 20px;margin-top: 10px;"></div>
+		    	<div class="right menu">
+			    	<div class="ui dropdown item">
+			    		<div class="text"></div>
+			    		<i class="dropdown icon"></i>
+			    		<div class="menu">
+			    			<a class="item" data-value="1">1X</a>
+			    			<a class="item" data-value="2">2X</a>
+			    			<a class="item" data-value="3">3X</a>
+			    			<a class="item" data-value="4">4X</a>
+			    			<a class="item" data-value="5">5X</a>
+			    			<a class="item" data-value="8">8X</a>
+			    			<a class="item" data-value="10">10X</a>
+			    			<a class="item" data-value="12">12X</a>
+			    			<a class="item" data-value="16">16X</a>
+			    			<a class="item" data-value="25">25X</a>
+			    		</div>
+			    	</div>
+			    </div>
 			</div>
 			<div id="container" style="position: absolute;overflow: auto;"></div>
 			<div class="ui dimmer">
