--- a/labs/Painter/index.html
+++ b/labs/Painter/index.html
@@ -10,6 +10,13 @@
 		<link rel="stylesheet" href="assets/css/icon/iconfont.css" />
 		<link rel="stylesheet" href="assets/libs/noUiSlider-master/distribute/nouislider.min.css" />
 		
+		<link rel="prefetch" href="assets/image/cursors/bucket.png" />
+		<link rel="prefetch" href="assets/image/cursors/CrossHair.gif" />
+		<link rel="prefetch" href="assets/image/cursors/eraser.png" />
+		<link rel="prefetch" href="assets/image/cursors/Eyedropper.png" />
+		<link rel="prefetch" href="assets/image/cursors/zoomIn.png" />
+		<link rel="prefetch" href="assets/image/cursors/zoomOut.png" />
+		
 		<script src="assets/libs/jquery/jquery-2.1.1.min.js"></script>
 		<script src="assets/libs/Semantic-UI-master/dist/semantic.min.js"></script>
 		<script src="assets/libs/colpick/js/colpick.js"></script>
