--- a/labs/Firefly/index.html
+++ b/labs/Firefly/index.html
@@ -54,6 +54,17 @@
 		    		</div>
 		    		<div class="divider"></div>
 		    		<div class="item">
+		    			<i class="iconfont icon-group icon"></i>
+		    			<span class="text">组成群组</span>
+		    			<span class="description">Ctrl+G</span>
+		    		</div>
+		    		<div class="item">
+		    			<i class="iconfont icon-ungroup icon"></i>
+		    			<span class="text">解散群组</span>
+		    			<span class="description">Ctrl+Shift+G</span>
+		    		</div>
+		    		<div class="divider"></div>
+		    		<div class="item">
 		    			<i class="copy icon"></i>
 		    			<span class="text">复制</span>
 		    			<span class="description">Ctrl+C</span>
