--- a/labs/Firefly/index.html
+++ b/labs/Firefly/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -35,7 +35,7 @@
 		    </div>
 		    <div class="ui dropdown item">
 		    	编辑
-		    	<div class="menu" style="min-width: 180px;">
+		    	<div class="menu" style="min-width: 220px;">
 		    		<div class="item">
 		    			<i class="reply icon"></i>
       					<span class="text">撤消</span>
