--- a/labs/Firefly/index.html
+++ b/labs/Firefly/index.html
@@ -13,6 +13,7 @@
 		<script src="assets/libs/Semantic-UI-master/dist/semantic.min.js"></script>
 		<script src="assets/libs/js-base64/base64.js"></script>
 		<script src="assets/libs/colpick/js/colpick.js"></script>
+		<script src="assets/libs/jquery-mousewheel-master/jquery.mousewheel.min.js"></script>
 		
 		<script src="assets/js/firefly.1.0.min.js"></script>
 	</head>
@@ -200,6 +201,12 @@
 	    		</div>
 		    </div>
 		    <div class="right menu">
+		    	<div class="ui dropdown item">
+		    		<div class="text"></div>
+		    		<i class="dropdown icon"></i>
+		    		<div class="menu">
+		    		</div>
+		    	</div>
 		    	<div class="ui dropdown item">
 		    		<div class="text"></div>
 		    		<i class="dropdown icon"></i>
