--- a/labs/Painter/index.html
+++ b/labs/Painter/index.html
@@ -10,13 +10,6 @@
 		<link rel="stylesheet" href="assets/css/icon/iconfont.css" />
 		<link rel="stylesheet" href="assets/libs/noUiSlider-master/distribute/nouislider.min.css" />
 		
-		<link rel="prefetch" href="assets/image/cursors/bucket.png" />
-		<link rel="prefetch" href="assets/image/cursors/CrossHair.gif" />
-		<link rel="prefetch" href="assets/image/cursors/eraser.png" />
-		<link rel="prefetch" href="assets/image/cursors/Eyedropper.png" />
-		<link rel="prefetch" href="assets/image/cursors/zoomIn.png" />
-		<link rel="prefetch" href="assets/image/cursors/zoomOut.png" />
-		
 		<script src="assets/libs/jquery/jquery-2.1.1.min.js"></script>
 		<script src="assets/libs/Semantic-UI-master/dist/semantic.min.js"></script>
 		<script src="assets/libs/colpick/js/colpick.js"></script>
@@ -31,6 +24,14 @@
 		<script src="assets/js/painter.1.0.min.js"></script>
 	</head>
 	<body>
+		<div id="preload">
+			<img src="assets/image/cursors/bucket.png" />
+			<img src="assets/image/cursors/CrossHair.gif" />
+			<img src="assets/image/cursors/eraser.png" />
+			<img src="assets/image/cursors/Eyedropper.png" />
+			<img src="assets/image/cursors/zoomIn.png" />
+			<img src="assets/image/cursors/zoomOut.png" />
+		</div>
 		<div id="topMenu" class="ui menu">
 			<div class="header item"><img src="assets/image/logo.png">Painter</div>
 		    <div class="ui dropdown item">
