--- a/labs/Firefly/index.html
+++ b/labs/Firefly/index.html
@@ -3,23 +3,27 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Firefly</title>
-		<link rel="stylesheet" href="assets/css/index.css" />
-		<link rel="stylesheet" href="assets/css/dragItem.css" />
-		<link rel="stylesheet" href="assets/css/scaleTool.css" />
 		<link rel="stylesheet" href="assets/libs/Semantic-UI-master/dist/semantic.min.css" />
-		<link rel="stylesheet" href="assets/libs/colpick/css/colpick.css" />
+		<link rel="stylesheet" href="assets/libs/noUiSlider-master/distribute/nouislider.min.css" />
 		
 		<link rel="stylesheet" href="assets/libs/CodeMirror-master/lib/codemirror.css" />
 		<link rel="stylesheet" href="assets/libs/CodeMirror-master/theme/tomorrow-night-bright.css"/>
 		
+		<link rel="stylesheet" href="assets/css/index.css" />
+		<link rel="stylesheet" href="assets/css/dragItem.css" />
+		<link rel="stylesheet" href="assets/css/scaleTool.css" />
+		
 		<script src="assets/libs/jquery/jquery-2.1.1.min.js"></script>
 		<script src="assets/libs/Semantic-UI-master/dist/semantic.min.js"></script>
+		<script src="assets/libs/noUiSlider-master/distribute/nouislider.min.js"></script>
 		<script src="assets/libs/js-base64/base64.js"></script>
-		<script src="assets/libs/colpick/js/colpick.js"></script>
 		<script src="assets/libs/jquery-mousewheel-master/jquery.mousewheel.min.js"></script>
 		
 		<script src="assets/libs/CodeMirror-master/lib/codemirror.js"></script>
 		<script src="assets/libs/CodeMirror-master/mode/xml/xml.js"></script>
+		
+		<script src="assets/libs/tinyColorPicker-master/colors.js"></script>
+		<script src="assets/libs/tinyColorPicker-master/jqColorPicker.min.js"></script>
 		
 		<script src="assets/js/firefly.1.0.min.js"></script>
 	</head>
