--- a/labs/PageNodes/index.html
+++ b/labs/PageNodes/index.html
@@ -1,11 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>PageNodes</title>
 		<link rel="stylesheet" href="assets/libs/Semantic-UI-master/dist/semantic.min.css" />
 		<link rel="stylesheet" href="assets/libs/noUiSlider-master/distribute/nouislider.min.css" />
-		<link rel="stylesheet" href="assets/libs/colpick/css/colpick.css" />
 		
 		<link rel="stylesheet" href="assets/css/icon/iconfont.css" />
 		<link rel="stylesheet" href="assets/css/index.css" />
@@ -14,9 +13,11 @@
 		<script src="assets/libs/jquery-mousewheel-master/jquery.mousewheel.min.js"></script>
 		<script src="assets/libs/Semantic-UI-master/dist/semantic.min.js"></script>
 		<script src="assets/libs/pixi.js-master/bin/pixi.min.js"></script>
-		<script src="assets/libs/colpick/js/colpick.js"></script>
 		<script src="assets/libs/noUiSlider-master/distribute/nouislider.min.js"></script>
 		<script src="assets/libs/js-base64/base64.js"></script>
+		
+		<script src="assets/libs/tinyColorPicker-master/colors.js"></script>
+		<script src="assets/libs/tinyColorPicker-master/jqColorPicker.min.js"></script>
   		
   		<script src="assets/js/pagenodes.1.0.min.js"></script>
 	</head>
