--- a/labs/GlobalEditor/index.html
+++ b/labs/GlobalEditor/index.html
@@ -221,10 +221,10 @@
 		    <div class="ui dropdown item">
 		    	工具
 		    	<div class="menu" style="min-width: 180px;">
-			    	<div class="item">
+			    	<a class="item" href="componentEditor.html" target="_blank">
 		    			<i class="external icon"></i>
 		    			<span class="text">组件编辑器</span>
-		    		</div>
+		    		</a>
 	    		</div>
 		    </div>
 		    <div class="ui dropdown item">
@@ -234,10 +234,10 @@
 		    			<i class="info circle icon"></i>
 		    			<span class="text">关于GlobalEditor</span>
 		    		</div>
-		    		<div class="item">
+		    		<a class="item" href="message.html" target="_blank">
 		    			<i class="comments outline icon"></i>
 		    			<span class="text">留言</span>
-		    		</div>
+		    		</a>
 	    		</div>
 		    </div>
 		    <div class="right menu">
