--- a/labs/Painter/index.html
+++ b/labs/Painter/index.html
@@ -239,6 +239,10 @@
 		    			<i class="info circle icon"></i>
 		    			<span class="text">关于Painter</span>
 		    		</div>
+		    		<a class="item" href="message.html" target="_blank">
+		    			<i class="comments outline icon"></i>
+		    			<span class="text">留言</span>
+		    		</a>
 	    		</div>
 		    </div>
 		    <div class="right menu">
