--- a/labs/PageNodes/message.html
+++ b/labs/PageNodes/message.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>GlobalEditor-留言</title>
+		<title>PageNodes-留言</title>
 		<style>
 			html,body
 			{
@@ -12,7 +12,7 @@
 			{
 				width: 100%;
 				text-align: center;
-				background-color: #1B1C1D;
+				background-color: #B5CC18;
 			}
 			.topBar #logo
 			{
@@ -43,7 +43,7 @@
 	</head>
 	<body>
 		<div class="topBar">
-			<div id="logo"><span>GlobalEditor</span></div>
+			<div id="logo"><span>PageNodes</span></div>
 		</div>
 		<div class="content">
 			<div id="uyan_frame"></div>
