--- a/labs/GlobalEditor/index.html
+++ b/labs/GlobalEditor/index.html
@@ -391,7 +391,8 @@
 					<div style="width: 200px;height: 200px;border-radius: 100px;border: solid 1px #333333;margin: auto;">
 						<img src="assets/image/logo.png" style="max-width: 200px; max-height: 200px;" />
 					</div>
-					<div style="font-size: 20px;color: #FFFFFF;text-align: center;"><!-- 名称和版本 --></div>
+					<div style="font-size: 20px;line-height:30px;color: #FFFFFF;text-align: center;"><!-- 名称和版本 --></div>
+					<div style="font-size: 12px;line-height:20px;color: #666666;text-align: center;"><!-- Cesium版本 --></div>
 					<br /><br /><br />
 				</div>
 			</div>
