--- a/labs/GlobalEditor/index.html
+++ b/labs/GlobalEditor/index.html
@@ -23,6 +23,8 @@
 		
 		<script src="assets/libs/CodeMirror-master/lib/codemirror.js"></script>
 		<script src="assets/libs/CodeMirror-master/mode/javascript/javascript.js"></script>
+		<script src="assets/libs/CodeMirror-master/addon/selection/active-line.js"></script>
+		<script src="assets/libs/CodeMirror-master/addon/edit/matchbrackets.js"></script>
 		
 		<script src="assets/libs/tinyColorPicker-master/colors.js"></script>
 		<script src="assets/libs/tinyColorPicker-master/jqColorPicker.min.js"></script>
